# melo-benchmark

./: .gitignore  LICENSE  README.md  install_spacy_models.sh  pyproject.toml
docs/: how_to_evaluate.md
reports/: table_2_lexical.txt  table_2_semantic.txt  table_5a_lexical.txt  table_5a_semantic.txt  table_5b_lexical.txt  table_5b_semantic.txt  table_5c_lexical.txt  table_5c_semantic.txt  table_6a_lexical.txt  table_6a_semantic.txt  table_6b_lexical.txt  table_6b_semantic.txt
resources/: trec_eval
results/bge_m3/aut_q_de_c_de/: results.txt  summary.tsv
results/bge_m3/aut_q_de_c_en/: results.txt  summary.tsv
results/bge_m3/bel_q_fr_c_en/: results.txt  summary.tsv
results/bge_m3/bel_q_fr_c_fr/: results.txt  summary.tsv
results/bge_m3/bel_q_nl_c_en/: results.txt  summary.tsv
results/bge_m3/bel_q_nl_c_nl/: results.txt  summary.tsv
results/bge_m3/bgr_q_bg_c_bg/: results.txt  summary.tsv
results/bge_m3/bgr_q_bg_c_en/: results.txt  summary.tsv
results/bge_m3/cze_q_cs_c_cs/: results.txt  summary.tsv
results/bge_m3/cze_q_cs_c_en/: results.txt  summary.tsv
results/bge_m3/deu_q_de_c_de/: results.txt  summary.tsv
results/bge_m3/deu_q_de_c_en/: results.txt  summary.tsv
results/bge_m3/dnk_q_da_c_da/: results.txt  summary.tsv
results/bge_m3/dnk_q_da_c_en/: results.txt  summary.tsv
results/bge_m3/esp_q_es_c_en/: results.txt  summary.tsv
results/bge_m3/esp_q_es_c_es/: results.txt  summary.tsv
results/bge_m3/est_q_et_c_en/: results.txt  summary.tsv
results/bge_m3/est_q_et_c_et/: results.txt  summary.tsv
results/bge_m3/fra_q_fr_c_en/: results.txt  summary.tsv
results/bge_m3/fra_q_fr_c_fr/: results.txt  summary.tsv
results/bge_m3/hrv_q_hr_c_en/: results.txt  summary.tsv
results/bge_m3/hrv_q_hr_c_hr/: results.txt  summary.tsv
results/bge_m3/hun_q_hu_c_en/: results.txt  summary.tsv
results/bge_m3/hun_q_hu_c_hu/: results.txt  summary.tsv
results/bge_m3/ita_q_it_c_en/: results.txt  summary.tsv
results/bge_m3/ita_q_it_c_it/: results.txt  summary.tsv
results/bge_m3/ltu_q_lt_c_en/: results.txt  summary.tsv
results/bge_m3/ltu_q_lt_c_lt/: results.txt  summary.tsv
results/bge_m3/lva_q_lv_c_en/: results.txt  summary.tsv
results/bge_m3/lva_q_lv_c_lv/: results.txt  summary.tsv
results/bge_m3/nld_q_nl_c_en/: results.txt  summary.tsv
results/bge_m3/nld_q_nl_c_nl/: results.txt  summary.tsv
results/bge_m3/nor_q_no_c_en/: results.txt  summary.tsv
results/bge_m3/nor_q_no_c_no/: results.txt  summary.tsv
results/bge_m3/pol_q_pl_c_en/: results.txt  summary.tsv
results/bge_m3/pol_q_pl_c_pl/: results.txt  summary.tsv
results/bge_m3/prt_q_pt_c_en/: results.txt  summary.tsv
results/bge_m3/prt_q_pt_c_pt/: results.txt  summary.tsv
results/bge_m3/rou_q_ro_c_en/: results.txt  summary.tsv
results/bge_m3/rou_q_ro_c_ro/: results.txt  summary.tsv
results/bge_m3/svk_q_sk_c_en/: results.txt  summary.tsv
results/bge_m3/svk_q_sk_c_sk/: results.txt  summary.tsv
results/bge_m3/svn_q_sl_c_en/: results.txt  summary.tsv
results/bge_m3/svn_q_sl_c_sl/: results.txt  summary.tsv
results/bge_m3/swe_q_sv_c_en/: results.txt  summary.tsv
results/bge_m3/swe_q_sv_c_sv/: results.txt  summary.tsv
results/bge_m3/usa_q_en_c_de_en_es_fr_it_nl_pl_pt/: results.txt  summary.tsv
results/bge_m3/usa_q_en_c_en/: results.txt  summary.tsv
results/bm25/aut_q_de_c_de/: results.txt  summary.tsv
results/bm25/aut_q_de_c_en/: results.txt  summary.tsv
results/bm25/bel_q_fr_c_en/: results.txt  summary.tsv
results/bm25/bel_q_fr_c_fr/: results.txt  summary.tsv
results/bm25/bel_q_nl_c_en/: results.txt  summary.tsv
results/bm25/bel_q_nl_c_nl/: results.txt  summary.tsv
results/bm25/bgr_q_bg_c_bg/: results.txt  summary.tsv
results/bm25/bgr_q_bg_c_en/: results.txt  summary.tsv
results/bm25/cze_q_cs_c_cs/: results.txt  summary.tsv
results/bm25/cze_q_cs_c_en/: results.txt  summary.tsv
results/bm25/deu_q_de_c_de/: results.txt  summary.tsv
results/bm25/deu_q_de_c_en/: results.txt  summary.tsv
scripts/: create_new_dataset.py  download_datasets.py  recreate_paper_visualizations.py  reproduce_paper_experiments.py
tests/: test_crosswalk_loader.py  test_dataset_builder.py  test_esco_loader.py  test_evaluator.py  test_semantic_baseline.py  test_statistical_analysis.py  test_visualization.py  utils.py
(+1613 files in other folders)
